--- a/ClientDesktop/MainWindow.xaml
+++ b/ClientDesktop/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox Name="PythonCodeTextBox" HorizontalAlignment="Center" VerticalAlignment="Top" Width="400" Height="200" Margin="0,58,0,0" />
+        <TextBox Name="PythonCodeTextBox" HorizontalAlignment="Center" VerticalAlignment="Top" Width="400" Height="200" Margin="0,58,0,0" AcceptsReturn="True" />
         <Button Content="Submit Code" HorizontalAlignment="Left" VerticalAlignment="Top" Width="76" Height="30" Margin="279,282,0,0" Click="SubmitCodeButton_Click" />
         <Button Content="Open File" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="30" Margin="437,282,0,0" Click="OpenFileButton_Click" />
     </Grid>
